[package]
name = "horn_schunck_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "horn_schunck_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
ndarray = "0.17.2"
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
wgpu = "28.0.0"

[tool.maturin]
