[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "horn_schunck_rs"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
